# Rustatui-Chat

./: Cargo.toml  README.md
chat-core/: Cargo.toml
chat-core/src/: lib.rs  main.rs
chat-core/src/client/: client_config.rs  client_manager.rs
chat-core/src/message/: chat_message.rs  command_processor.rs
chat-core/src/server/: connection.rs  mod.rs  room.rs  room_manager.rs  server.rs  server_config.rs
chat-core/src/utils/: color_manager.rs  formatter.rs  mod.rs
chat-tui/: Cargo.toml
chat-tui/src/: app.rs  lib.rs  main.rs
chat-tui/src/client/: mod.rs  tui_client.rs
chat-tui/src/event/: event_handler.rs
chat-tui/src/input/: input_handler.rs
chat-tui/src/state/: action.rs  mod.rs  state.rs
chat-tui/src/view/: mod.rs  view.rs
chat-tui/src/view/components/: input_box.rs
chat-tui/src/view/pages/: mod.rs
chat-tui/src/view/pages/chat_page/: chat_page.rs  mod.rs
chat-tui/src/view/pages/chat_page/components/: header.rs  helpbar.rs  message_input_box.rs  message_list.rs  mod.rs  room_list.rs  user_list.rs
chat-tui/src/view/pages/connection_page/: connection_page.rs  mod.rs
src/: lib.rs  main.rs
src/client/: client_config.rs  client_manager.rs  mod.rs
src/message/: chat_message.rs  command_processor.rs  mod.rs
src/server/: connection.rs  mod.rs  room.rs  room_manager.rs  server.rs
src/utils/: color.rs  formatter.rs  mod.rs
