[package]
name = "chat-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5.57", features = ["derive"] }

[lib]
name = "chat_core"
path = "src/lib.rs"

[[bin]]
name = "chat-server"
path = "src/main.rs"