[package]
name = "chat-tui"
version = "0.1.0"
edition = "2024"

[dependencies]

circular-queue = "0.2.7"
chat-core = {path = "../chat-core"}
ratatui = {version = "0.30.0", features = ["all-widgets"] }
crossterm = "0.29.0"
tokio = {version = "1.49.0", features = ["full"]}
tokio-stream = "0.1.18"
color-eyre = "0.6.5"
strum = "0.27.2"
serde = "1.0.228"
serde_json = "1.0.149"


[[bin]]
name = "chat-tui"
path = "src/main.rs"
